# rust-template

./: .gitignore  Cargo.toml  README.md  SKILL.md  build.rs  pyproject.toml  rust-toolchain.toml
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: ci-cd.yml
benches/: cli_bench.rs
src/: cli.rs  lib.rs  main.rs
src/commands/: example.rs  mod.rs  version.rs
tests/: cli.rs  test_cli.py
