[package]
name = "rust-template"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Cassidy Prather <pratherea@gmail.com>"]
description = "Cassidy's opinionated Rust template"
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/CassidyPrather/rust-template"
keywords = ["cli", "template"]
categories = ["command-line-utilities"]

# The library target exists so integration tests and downstream code can
# reuse the CLI internals. The binary is a thin wrapper around it.
[lib]
name = "rust_template"
path = "src/lib.rs"

[[bin]]
name = "rust-template"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.100", default-features = true }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = true }
log = { version = "0.4.28", default-features = true }

[dev-dependencies]
assert_cmd = { version = "2.0.17", default-features = true }
predicates = { version = "3.1.3", default-features = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Turn everything up. I'm not a coward!
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Targeted allows (each one earns its place, like the ruff ignores did)
multiple_crate_versions = "allow" # Transitive deps disagree; not actionable here

[profile.release]
# Smaller, faster binaries at the cost of compile time
lto = "thin"
strip = "symbols"
